name:           snappy
version:        0.1.0.0
homepage:       http://github.com/mailrank/snappy
bug-reports:    http://github.com/mailrank/snappy/issues
synopsis:
  Bindings to the Google Snappy library for fast compression/decompression
description:
  This library provides fast, pure Haskell bindings to Google's Snappy
  compression and decompression library: <http://code.google.com/p/snappy/>
license:        BSD3
license-file:   LICENSE
author:         Bryan O'Sullivan <bos@mailrank.com>
maintainer:     Bryan O'Sullivan <bos@mailrank.com>
copyright:      Copyright 2011 MailRank, Inc.
category:       Codec, Compression
build-type:     Simple
cabal-version:  >= 1.6
extra-source-files:
  README.md
  include/hs_snappy.h
  tests/Makefile
  tests/Properties.hs
  tests/Snappy.hs

library
  c-sources:       cbits/hs_snappy.cpp
  include-dirs:    include
  extra-libraries: snappy stdc++

  cc-options:      -Wall
  ghc-options:     -Wall

  build-depends:   base < 5, bytestring
  if impl(ghc >= 6.10)
    build-depends: base >= 4

  exposed-modules:
    Codec.Compression.Snappy
    Codec.Compression.Snappy.Lazy

  other-modules:
    Codec.Compression.Snappy.Internal

source-repository head
  type:     git
  location: http://github.com/mailrank/snappy
