name:           snappy
version:        0.2.0.1
homepage:       http://github.com/bos/snappy
bug-reports:    http://github.com/bos/snappy/issues
synopsis:
  Bindings to the Google Snappy library for fast compression/decompression
description:
  This library provides fast, pure Haskell bindings to Google's Snappy
  compression and decompression library: <http://code.google.com/p/snappy/>
license:        BSD3
license-file:   LICENSE
author:         Bryan O'Sullivan <bos@serpentine.com>
maintainer:     Bryan O'Sullivan <bos@serpentine.com>
copyright:      Copyright 2011 MailRank, Inc.
category:       Codec, Compression
build-type:     Simple
cabal-version:  >= 1.8
extra-source-files:
  README.md
  include/hs_snappy.h
  tests/Makefile
  tests/Properties.hs
  tests/Speedy.hs

library
  c-sources:       cbits/hs_snappy.cpp
  include-dirs:    include
  extra-libraries: snappy stdc++

  cc-options:      -Wall
  ghc-options:     -Wall

  build-depends:   base < 5, bytestring
  if impl(ghc >= 6.10)
    build-depends: base >= 4

  exposed-modules:
    Codec.Compression.Snappy
    Codec.Compression.Snappy.Lazy

  other-modules:
    Codec.Compression.Snappy.Internal

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Properties.hs

  ghc-options:
    -Wall -threaded -O0 -rtsopts

  cpp-options:
    -DASSERTS -DHAVE_DEEPSEQ

  build-depends:
    base < 5,
    bytestring,
    cmdargs,
    QuickCheck >= 2.4,
    snappy,
    test-framework,
    test-framework-quickcheck2,
    time,
    zlib

source-repository head
  type:     git
  location: http://github.com/bos/snappy
